--- a/src/app/public/flujo-de-caja/flujo-de-caja.component.scss
+++ b/src/app/public/flujo-de-caja/flujo-de-caja.component.scss
@@ -23,6 +23,7 @@
     height: 35px;
     font-size: 9px;
     padding: 10px;
+    text-transform: none;
 }
 .btn-blanco{
     background-color: white;
