Agrupación por rango terminada junto con eje horizontal

--- a/src/app/public/flujo-de-caja/flujo-de-caja.component.html
+++ b/src/app/public/flujo-de-caja/flujo-de-caja.component.html
@@ -2,21 +2,23 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-5">
+    <div class="col-sm-4">
       <label for="">Ultima Actualización: {{hoy | date: 'short'}}</label>
     </div>
-    <div class="col-sm-1"></div>
-    <div class="col-sm-6">
+    <div class="col-sm-8">
       <div class="row">
-          <div class="col-sm-4">
-              <button class="btn btn-blanco" (click)="calendario=!calendario">Seleccionar rango</button>
+          <div class="col-sm-3">
+              <button class="btn btn-azul" (click)="goToDatos()" style="cursor:pointer">Ver Datos</button>
+            </div>
+          <div class="col-sm-3">
+              <button class="btn btn-blanco" (click)="calendario=!calendario" style="font-weight: bold; cursor:pointer">{{rango}}</button>
             <nb-calendar-range *ngIf="calendario" [range]="range" [showHeader]="false" (rangeChange)="getRangeDate($event)" style="position: absolute;z-index:100;size:100px"></nb-calendar-range></div>
-        <div class="col-sm-4">
-          <button class="btn btn-azul" (click)="goToImportarFlujo()">Importar datos</button>
+        <div class="col-sm-3">
+          <button class="btn btn-azul" (click)="goToImportarFlujo()" style="cursor:pointer">Importar datos</button>
         </div>
-        <div class="col-sm-4">
-            <div (click)="myFunction()" class="dropdown">
-                <button class="dropbtn">Escenario</button>
+        <div class="col-sm-3">
+            <div (click)="myFunction()" class="dropdown" style="padding: 0px; border-radius:.25rem">
+                <button class="btn btn-blanco" style="font-weight: bold; cursor:pointer">Escenario</button>
                 <div id="myDropdown" class="dropdown-content">
                   <a href="#">Base</a>
                   <a href="dashboard/agregar-escenario">Agregar escenario</a>
@@ -165,11 +167,11 @@
           <div class="col-sm-4">
               <button class="btn btn-dark-graf" (click)="agrupacionFechas=1;agruparPorDias()" [ngStyle]="{'background-color': !(agrupacionFechas===1)? 'white':'black',
               'color': (agrupacionFechas===1)? 'white':'black'}" style="width:22%">Día</button>
-              <button class="btn btn-blanco-sm-graf" (click)="agrupacionFechas=2" [ngStyle]="{'background-color': !(agrupacionFechas===2)? 'white':'black',
+              <button class="btn btn-blanco-sm-graf" (click)="agrupacionFechas=2;agruparPorSemanas()" [ngStyle]="{'background-color': !(agrupacionFechas===2)? 'white':'black',
               'color': (agrupacionFechas===2)? 'white':'black'}" style="width:22%">Semana</button>
-              <button class="btn btn-blanco-sm-graf" (click)="agrupacionFechas=3" [ngStyle]="{'background-color': !(agrupacionFechas===3)? 'white':'black',
+              <button class="btn btn-blanco-sm-graf" (click)="agrupacionFechas=3; agruparPorMes()" [ngStyle]="{'background-color': !(agrupacionFechas===3)? 'white':'black',
               'color': (agrupacionFechas===3)? 'white':'black'}" style="width:22%">Mes</button>
-              <button class="btn btn-blanco-sm-graf" (click)="agrupacionFechas=4" [ngStyle]="{'background-color': !(agrupacionFechas===4)? 'white':'black',
+              <button class="btn btn-blanco-sm-graf" (click)="agrupacionFechas=4; agruparPorAno()" [ngStyle]="{'background-color': !(agrupacionFechas===4)? 'white':'black',
               'color': (agrupacionFechas===4)? 'white':'black'}" style="width:22%">Año</button>
           </div>
           <canvas #grafico1 style="width: 100%; height: 300px;" [ngStyle]="{'display': !(mostrarGraf===1)? 'none': 'flex'}"></canvas>
